--- a/index.html
+++ b/index.html
@@ -7,8 +7,9 @@
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 <link href="styles.286927496ed0e6669d1261c4c0ad10a7.bundle.css" rel="stylesheet"></head>
 <body>
   <app-root>Loading...</app-root>
-<script type="text/javascript" src="inline.d41d8cd98f00b204e980.bundle.js"></script><script type="text/javascript" src="styles.58e065928ed8ebd0b582.bundle.js"></script><script type="text/javascript" src="scripts.a4edda89d89e9fc8222b.bundle.js"></script><script type="text/javascript" src="main.3f994fee61104003d416.bundle.js"></script></body>
+<script type="text/javascript" src="inline.d41d8cd98f00b204e980.bundle.js"></script><script type="text/javascript" src="styles.58e065928ed8ebd0b582.bundle.js"></script><script type="text/javascript" src="scripts.a4edda89d89e9fc8222b.bundle.js"></script><script type="text/javascript" src="main.f749a6a66891cd06ab3f.bundle.js"></script></body>
 </html>
