--- a/src/index.html
+++ b/src/index.html
@@ -10,6 +10,6 @@
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
 <body>
-  <app-root><p>Loading...</p></app-root>
+  <app-root><p class="loadingWrapper">Loading...</p></app-root>
 </body>
 </html>
