favicon and loading update

--- a/src/index.html
+++ b/src/index.html
@@ -2,14 +2,17 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>Website2016</title>
+  <title>Tom Piere: web developer</title>
   <base href="/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="icon" type="image/x-icon" href="favicon-gears.ico">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
 <body>
-  <app-root><p class="loadingWrapper">Loading...</p></app-root>
+  <app-root><p class="loadingWrapper">
+      <img src="images/ripple.gif"/><br/>
+      Loading...
+    </p></app-root>
 </body>
 </html>
