--- a/index.html
+++ b/index.html
@@ -2,14 +2,17 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>Website2016</title>
-  <base href="/">
+  <title>Tom Piere: web developer</title>
+  <base href="/website2016/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="icon" type="image/x-icon" href="favicon-gears.ico">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-<link href="styles.a0dc4a4098731df7ad901324f7cba522.bundle.css" rel="stylesheet"></head>
+<link href="styles.5c665c12eb98065c73c74a218eda4a9b.bundle.css" rel="stylesheet"></head>
 <body>
-  <app-root>Loading...</app-root>
+  <app-root><p class="loadingWrapper">
+      <img src="images/ripple.gif"/><br/>
+      Loading...
+    </p></app-root>
 <script type="text/javascript" src="inline.d41d8cd98f00b204e980.bundle.js"></script><script type="text/javascript" src="styles.5f7f16a82a4f91544984.bundle.js"></script><script type="text/javascript" src="scripts.dc76099c656a79cf243f.bundle.js"></script><script type="text/javascript" src="main.40d2138eeb15faa692eb.bundle.js"></script></body>
 </html>
